--- a/css/styles.css
+++ b/css/styles.css
@@ -3,20 +3,20 @@
     --primary-font: Roboto, sans-serif;
     --secondary-font: Raleway, sans-serif;
     /* Colors */
-    --main-cl: #434455;
-    --main-title-cl: #2E2F42;
-    --hero-cl: #FFFFFF;
-    --footer-cl: #F4F4FD;
-    --main-dark-bg:#2E2F42;
-    --header-bg: #E7E9FC;
-    --main-logo-cl: #4D5AE5;
+    --text: #434455;
+    --dark: #2E2F42;
+    --white-background: #FFFFFF;
+    --light: #F4F4FD;
+    --accent: #E7E9FC;
+    --primary-brand: #4D5AE5;
+    --pressed-state: #404bbf;
 }
 
 body {
     font-family: var(--primary-font);
     font-style: normal;
     font-weight: 400;
-    color: var(--main-cl);
+    color: var(--text);
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -24,7 +24,7 @@ body {
 
 /* Reset */
 .page {
-    background-color: var(--hero-cl)
+    background-color: var(--white-background)
 }
 
 .list {
@@ -43,15 +43,15 @@ body {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
-    color: var(--main-logo-cl);
-    background-color: var(--footer-cl);
+    color: var(--primary-brand);
+    background-color: var(--light);
     letter-spacing: 0.04em;
 }
 
 .btn:hover,
 .btn:focus {
-    color: #FFFFFF;
-    background-color: #404BBF;
+    color: var(--white-background);
+    background-color: var(--pressed-state);
 }
 .hero-btn {
     font-family: inherit;
@@ -60,11 +60,11 @@ body {
 
 .hero-btn:hover,
 .hero-btn:focus {
-    background-color: #404BBF;
+    background-color: var(--pressed-state);
 }
 
 .logo {
-    color: var(--main-logo-cl);
+    color: var(--primary-brand);
     font-family: var(--secondary-font);
     font-weight: 800;
     font-size: 18px;
@@ -74,19 +74,19 @@ body {
 }
 
 .logo-part {
-    color: var(--main-title-cl);
+    color: var(--dark);
 }
 
 .page-nav .link{
     font-weight: 500;
-    color: var(--main-title-cl);
+    color: var(--dark);
 }
 
 .contacts .link:hover,
 .contacts .link:focus,
 .page-nav .link:hover,
 .page-nav .link:focus {
-    color: #404BBF;
+    color: var(--pressed-state);
 
 }
 
@@ -98,7 +98,7 @@ body {
 
 
 .section-hero {
-    background-color: var(--main-dark-bg);
+    background-color: var(--dark);
 }
 
 .hero-title {
@@ -106,7 +106,7 @@ body {
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
-    color: var(--hero-cl);
+    color: var(--white-background);
     text-align: center;
 }
 
@@ -114,8 +114,8 @@ body {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
-    color: var(--hero-cl);
-    background-color: var(--main-logo-cl);
+    color: var(--white-background);
+    background-color: var(--primary-brand);
     letter-spacing: 0.04em
 }
 
@@ -128,46 +128,46 @@ letter-spacing: 0.02em;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    color: var(--main-title-cl);
+    color: var(--dark);
 }
 
 .doing-title {
     font-weight: 700;
     font-size: 36px;
-    color: var(--main-title-cl);
+    color: var(--dark);
     line-height: 1.11;
     text-align: center;
     text-transform: capitalize;
 }
 
 .our-team {
-    background-color: #F4F4FD;
+    background-color: var(--light);
 }
 
 .our-team-title {
     font-size: 36px;
     line-height: 1.11;
-    color: var(--main-title-cl);
+    color: var(--dark);
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
 }
 
 .card-bg {
-    background-color: #FFFFFF;
+    background-color: var(--white-background);
 }
 
 .text {
     font-size: 16px;
     letter-spacing: 0.02em;
-    color: var(--main-cl);
+    color: var(--text);
 }
 
 .footer {
-    background-color: #2E2F42;
-    color: var(--footer-cl);
+    background-color: var(--dark);
+    color: var(--light);
 }
 
 .logo-part-footer {
-    color: var(--footer-cl);
+    color: var(--light);
 }
